--- a/okayyyy/okayyyy.tex
+++ b/okayyyy/okayyyy.tex
@@ -151,9 +151,9 @@ All authors must submit their articles at
 are using Overleaf to write your article, you can use the ``Submit to
 PNAS'' option in the top bar of the editor window.
 
-\hypertarget{format}{%
-\subsection*{Format}\label{format}}
-\addcontentsline{toc}{subsection}{Format}
+Format \{\#format .unnumbered\}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
 Many authors find it useful to organize their manuscripts with the
 following order of sections; Title, Author Affiliation, Keywords,
